2007-10-15  Akim Demaille  <demaille@gostai.com>

	Sort rules.
	* src/parser/ugrammar.y: Here.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Declaration order change.
	* src/parser/ugrammar.y: Here.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Fix arg count check.
	* src/runner/runner.cc: here.
	The code used to be right, I shouldn't have changed it.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Fix arity check.
	* src/object/primitives.hh: Comment changes.
	* src/object/urbi-exception.hxx: Fix error message.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Sanitize Urbi exceptions.
	* src/object/urbi-exception.cc, src/object/urbi-exception.hh,
	* src/object/urbi-exception.hxx:
	Pass strings by const ref.
	Pass first the formal argument type/number, then the effective
	one.
	I think the previous code had it wrong, but it was not tested
	(for builtins).
	(UrbiException::fun_): New.
	With a new ctor.
	(UrbiException::what): Adjust.
	* src/object/primitives.hh: Adjust dependencies, and pass
	the __PRETTY_FUNCTION__ when we can.
	(TYPE_CHECK): Make it a decent macro.
	* src/runner/runner.cc: Adjust.
	* src/object/float-class.cc: Adjust.
	(float_class_clone): New.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	shared_type.
	* src/object/object.hh, src/object/atom.hh (shared_type): New.
	* src/object/atom.hh, src/object/atom.hxx (clone): New.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	++ etc. are expressions bw expressions.
	* src/parser/ugrammar.y: Don't require lvalues for ++, += etc.
	And don't return lvalues either (bw, even in C ++ does not
	return an lvalue, it doesn't make sense).
	Give precedences to them.

2007-10-13  Akim Demaille  <akim.demaille@free.fr>

	src/ast/Makefile.in no longer exists.
	* dev/ast-ignores-gen: Remove it from ignores.

2007-10-13  Akim Demaille  <akim.demaille@free.fr>

	This is not k1.
	* configure.ac: Fix AC_INIT invocation.

2007-10-13  Akim Demaille  <akim.demaille@free.fr>

	Remove debug code.