@@ -225,6 +225,7 @@ STRING   \"([^\"]|"\\\"")*\"
 "def"           return token::TOK_DEF;
 "delgroup"      return token::TOK_DELGROUP;
 "disinherits"   return token::TOK_DISINHERITS;
+"do"	   	return token::TOK_DO;
 "echo"          RETURN_OP(ECHO);
 "else"          return token::TOK_ELSE;
 "emit"          return token::TOK_EMIT;
